Fix #127328: Snake Hook brush rotation applied incorrectly for symmetry

Pull Request: https://projects.blender.org/blender/blender/pulls/127373